Add altfragen_subject_worker service to Docker Compose and implement subject job management methods in SupabaseClient
- Introduced a new service for processing subject jobs in Docker Compose.
- Added methods to fetch pending subject jobs, update job status, fetch questions for reassign jobs, and update question subjects in SupabaseClient, enhancing job management capabilities.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,17 @@ services:
     networks:
       - backend
 
+  altfragen_subject_worker:
+    build: ./ai-comments
+    container_name: altfragen_subject_worker
+    env_file: .env
+    volumes:
+      - ./ai-comments:/app
+    command: python -m ai_comments.subject_job_worker
+    networks:
+      - backend
+    restart: unless-stopped
+
   caddy:
     image: caddy:2
     container_name: caddy_reverse_proxy
