Update Docker Compose command for subject job worker to use script file directly

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     env_file: .env
     volumes:
       - ./ai-comments:/app
-    command: python -m ai_comments.subject_job_worker
+    command: python subject_job_worker.py
     networks:
       - backend
     restart: unless-stopped
