Refactor subject job worker setup in Docker Compose and remove obsolete script. Update service build path and volume mapping for subject worker. Enhance Caddy configuration to route requests for subject worker service.

--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -13,6 +13,10 @@ api.altfragen.io {
         reverse_proxy altfragen_ai:8000
     }
 
+    handle_path /subject-worker* {
+        reverse_proxy altfragen_subject_worker:8001
+    }
+
     handle_path /videos* {
         root * /opt/videos
         file_server
