Add Prometheus and Grafana services to Docker Compose, update Caddy configuration for metrics routing, and enhance .gitignore for metrics data
- Introduced `supabase_prometheus` and `supabase_grafana` services in Docker Compose for monitoring.
- Configured volume mappings for Prometheus and Grafana data storage.
- Updated Caddyfile to route `/metrics` requests to the Grafana service.
- Enhanced .gitignore to exclude metrics data directories.

--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -21,4 +21,8 @@ api.altfragen.io {
         root * /opt/videos
         file_server
     }
+
+    handle_path /metrics* {
+        reverse_proxy supabase_grafana:3000
+    }
 }
