--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,9 +41,54 @@ services:
     networks:
       - backend
 
+  supabase_prometheus:
+    image: prom/prometheus:latest
+    container_name: supabase_prometheus
+    restart: unless-stopped
+    env_file: .env
+    volumes:
+      - ./supabase-metrics/prometheus/prometheus.yml.template:/etc/prometheus/prometheus.yml.template
+      - ./supabase-metrics/entrypoint.sh:/entrypoint.sh
+      - prometheus_data:/prometheus
+    entrypoint: ["/bin/sh", "/entrypoint.sh"]
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+      - '--web.console.templates=/usr/share/prometheus/consoles'
+      - '--storage.tsdb.retention.time=30d'
+    networks:
+      - backend
+    ports:
+      - "9090:9090"
+
+  supabase_grafana:
+    image: grafana/grafana:latest
+    container_name: supabase_grafana
+    restart: unless-stopped
+    env_file: .env
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./supabase-metrics/grafana/provisioning:/etc/grafana/provisioning
+      - ./supabase-metrics/grafana/dashboards:/var/lib/grafana/dashboards
+    environment:
+      - GF_SECURITY_ADMIN_USER=${GRAFANA_ADMIN_USER:-admin}
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD:-admin}
+      - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_SERVER_ROOT_URL=${GRAFANA_ROOT_URL:-http://localhost:3000}
+      - GF_INSTALL_PLUGINS=
+    networks:
+      - backend
+    ports:
+      - "3000:3000"
+    depends_on:
+      - supabase_prometheus
+
 volumes:
   caddy_data:
   caddy_config:
+  prometheus_data:
+  grafana_data:
 
 networks:
   backend:
