Update Docker Compose and Caddy configuration for Grafana metrics
- Changed Grafana root URL in Docker Compose to point to the new metrics endpoint.
- Enabled serving from subpath for Grafana.
- Updated Caddyfile to handle metrics requests with a reverse proxy, stripping the prefix for proper routing.

--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -22,7 +22,13 @@ api.altfragen.io {
         file_server
     }
 
-    handle_path /metrics* {
-        reverse_proxy supabase_grafana:3000
+    @metrics {
+        path /metrics*
+    }
+    handle @metrics {
+        uri strip_prefix /metrics
+        reverse_proxy supabase_grafana:3000 {
+            header_up X-Forwarded-Prefix /metrics
+        }
     }
 }
