--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -22,11 +22,7 @@ api.altfragen.io {
         file_server
     }
 
-    @metrics {
-        path /metrics*
-    }
-    handle @metrics {
-        uri strip_prefix /metrics
+    handle_path /metrics* {
         reverse_proxy supabase_grafana:3000 {
             header_up X-Forwarded-Prefix /metrics
         }
