--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -25,6 +25,7 @@ api.altfragen.io {
     handle_path /metrics* {
         reverse_proxy supabase_grafana:3000 {
             header_up X-Forwarded-Prefix /metrics
+            header_up Host {host}
         }
     }
 }
