Refactor Docker Compose and Caddyfile for metrics services and remove deprecated components
- Removed `supabase_prometheus` and `supabase_grafana` services from Docker Compose for a streamlined configuration.
- Updated Caddyfile to route metrics requests to a new subdomain and adjusted path handling.
- Deleted obsolete scripts and documentation related to the removed services for cleaner project structure.

--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,6 +1,6 @@
 api.altfragen.io {
 
-    @old_root not path /parser* /ai* /videos* /metrics* /subject-worker*
+    @old_root not path /parser* /ai* /videos* /subject-worker*
     handle @old_root {
         redir /parser{uri} 301
     }
@@ -22,11 +22,8 @@ api.altfragen.io {
         file_server
     }
 
-    handle_path /metrics* {
-        reverse_proxy supabase_grafana:3000 {
-            header_up X-Forwarded-Prefix /metrics
-            header_up Host {host}
-            header_up X-Forwarded-Host {host}
-        }
-    }
+}
+
+metrics.altfragen.io {
+    reverse_proxy supabase_metrics_grafana:8080
 }
