--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -26,6 +26,5 @@ api.altfragen.io {
 
 metrics.altfragen.io {
     encode gzip
-
-    reverse_proxy supabase-grafana-supabase-grafana-1:8080
+    reverse_proxy grafana:3000
 }
