Refactor Prometheus configuration in Docker Compose for improved template handling
- Updated the Prometheus service to copy configuration files to a temporary location before applying environment variable substitutions.
- Changed the volume mapping to use the actual Prometheus and alerts configuration files instead of templates for better clarity and functionality.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,16 +51,19 @@ services:
       - /bin/sh
       - -c
       - |
-        apk add --no-cache gettext
-        envsubst < /etc/prometheus/prometheus.yml.template > /etc/prometheus/prometheus.yml
-        exec /bin/prometheus --config.file=/etc/prometheus/prometheus.yml \
+        cp /etc/prometheus/prometheus.yml /tmp/prometheus.yml
+        cp /etc/prometheus/alerts.yml /tmp/alerts.yml 2>/dev/null || true
+        sed -i "s|\${SUPABASE_PROJECT_REF}|${SUPABASE_PROJECT_REF}|g" /tmp/prometheus.yml
+        sed -i "s|\${SUPABASE_SERVICE_ROLE_KEY}|${SUPABASE_SERVICE_ROLE_KEY}|g" /tmp/prometheus.yml
+        exec /bin/prometheus --config.file=/tmp/prometheus.yml \
           --storage.tsdb.path=/prometheus \
           --web.console.libraries=/usr/share/prometheus/console_libraries \
           --web.console.templates=/usr/share/prometheus/consoles \
           --storage.tsdb.retention.time=30d \
           --web.enable-lifecycle
     volumes:
-      - ./supabase-metrics/prometheus.yml.template:/etc/prometheus/prometheus.yml.template:ro
+      - ./supabase-metrics/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - ./supabase-metrics/alerts.yml:/etc/prometheus/alerts.yml:ro
       - prometheus_data:/prometheus
     ports:
       - "9090:9090"
