Refactor Prometheus configuration in Docker Compose to use secrets for sensitive data
- Replaced environment variable substitution for the Supabase service role key with a secrets management approach.
- Updated Prometheus configuration to reference the service role key from a secrets file instead of using plaintext in the configuration.
- Removed the README.md file as it is no longer needed for the current setup.

--- a/supabase-metrics/prometheus.yml
+++ b/supabase-metrics/prometheus.yml
@@ -24,11 +24,11 @@ scrape_configs:
     scheme: https
     basic_auth:
       username: service_role
-      password: '${SUPABASE_SERVICE_ROLE_KEY}'
+      password_file: /run/secrets/supabase_service_role_key
     static_configs:
       - targets:
-          - '${SUPABASE_PROJECT_REF}.supabase.co:443'
+          - 'ynzxzhpivcmkpipanltd.supabase.co:443'  # replace with your Supabase project ref
         labels:
-          project: '${SUPABASE_PROJECT_REF}'
+          project: 'ynzxzhpivcmkpipanltd'
           service: 'supabase'
 
