--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,21 +47,13 @@ services:
     image: prom/prometheus:latest
     container_name: prometheus
     restart: unless-stopped
-    entrypoint:
-      - /bin/sh
-      - -c
-      - |
-        cp /etc/prometheus/prometheus.yml /tmp/prometheus.yml
-        cp /etc/prometheus/alerts.yml /tmp/alerts.yml 2>/dev/null || true
-        # Substitute environment variables - escape $ in pattern, use env var in replacement
-        sed -i "s|\\\${SUPABASE_PROJECT_REF}|${SUPABASE_PROJECT_REF}|g" /tmp/prometheus.yml
-        sed -i "s|\\\${SUPABASE_SERVICE_ROLE_KEY}|${SUPABASE_SERVICE_ROLE_KEY}|g" /tmp/prometheus.yml
-        exec /bin/prometheus --config.file=/tmp/prometheus.yml \
-          --storage.tsdb.path=/prometheus \
-          --web.console.libraries=/usr/share/prometheus/console_libraries \
-          --web.console.templates=/usr/share/prometheus/consoles \
-          --storage.tsdb.retention.time=30d \
-          --web.enable-lifecycle
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+      - '--web.console.templates=/usr/share/prometheus/consoles'
+      - '--storage.tsdb.retention.time=30d'
+      - '--web.enable-lifecycle'
     volumes:
       - ./supabase-metrics/prometheus.yml:/etc/prometheus/prometheus.yml:ro
       - ./supabase-metrics/alerts.yml:/etc/prometheus/alerts.yml:ro
@@ -70,10 +62,9 @@ services:
       - "9090:9090"
     networks:
       - metrics
-    env_file: .env
-    environment:
-      - SUPABASE_PROJECT_REF=${SUPABASE_PROJECT_REF}
-      - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
+    secrets:
+      - supabase_service_role_key
+
 
   grafana:
     image: grafana/grafana:latest
@@ -107,3 +98,8 @@ networks:
   supabase_grafana:
     external: true
     name: supabase-grafana_default
+
+secrets:
+  supabase_service_role_key:
+    file: ./supabase-metrics/secrets/supabase_service_role_key
+
